// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package streamengine.store.meta.v1;

enum EntryType {
    HOLE = 0;
    EVENT = 1;
    BRIDGE = 2;
}

message Entry {
    EntryType entry_type = 1;
    uint32 epoch = 2;
    bytes event = 3;
}

message Record {
    uint64 stream_id = 1;
    uint32 epoch = 2;
    optional uint32 writer_epoch = 3;
    optional uint64 acked_seq = 4;
    optional uint32 first_index = 5;
    repeated Entry entries = 6;
}

message RecordGroup {
    repeated Record records = 1;
}
